refaktorizacija i specifikovani primjer
masovna refaktorizacija, kreirane pomocne holder klase, omoguceno pravilno izvrsavanje ciljanih primjera iz specifikacije